Fix order table miss-alignment. Now nothing goes out of the side bar in the small screens.

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -5,8 +5,7 @@ html, body{
   	-khtml-user-select: none;
   	-moz-user-select: none;
 	-ms-user-select: none;
-  	user-select: none;
-	cursor: pointer;	
+  	user-select: none;	
 }
 .jumbotron{
 	background-color: #ffffff;
@@ -129,5 +128,11 @@ html, body{
 	height:200px;
 	width:200px;
 	border:1px solid black;
+}
+
+/* ----------- order table ------------ */
+.table {
+    table-layout: fixed;
+    word-wrap: break-word;
 }
 
